--- a/examples-generated/certificatemanager/v1beta1/dnsauthorization.yaml
+++ b/examples-generated/certificatemanager/v1beta1/dnsauthorization.yaml
@@ -8,5 +8,6 @@ metadata:
   name: default
 spec:
   forProvider:
-    description: The default dnss
+    description: The default dns
     domain: subdomain.hashicorptest.com
+    location: global
