--- a/examples-generated/compute/v1beta1/instancegroupmanager.yaml
+++ b/examples-generated/compute/v1beta1/instancegroupmanager.yaml
@@ -8,7 +8,7 @@ metadata:
   name: appserver
 spec:
   forProvider:
-    all_instances_config:
+    allInstancesConfig:
     - labels:
         label_key: label_value
       metadata:
