--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -459,8 +459,9 @@ spec:
                                 items:
                                   properties:
                                     cpuIdle:
-                                      description: Determines whether CPU should be
-                                        throttled or not outside of requests.
+                                      description: |-
+                                        Determines whether CPU is only allocated during requests. True by default if the parent resources field is not set. However, if
+                                        resources is set, this field must be explicitly set to true to preserve the default behavior.
                                       type: boolean
                                     limits:
                                       additionalProperties:
@@ -1401,8 +1402,9 @@ spec:
                                 items:
                                   properties:
                                     cpuIdle:
-                                      description: Determines whether CPU should be
-                                        throttled or not outside of requests.
+                                      description: |-
+                                        Determines whether CPU is only allocated during requests. True by default if the parent resources field is not set. However, if
+                                        resources is set, this field must be explicitly set to true to preserve the default behavior.
                                       type: boolean
                                     limits:
                                       additionalProperties:
@@ -2543,8 +2545,9 @@ spec:
                                 items:
                                   properties:
                                     cpuIdle:
-                                      description: Determines whether CPU should be
-                                        throttled or not outside of requests.
+                                      description: |-
+                                        Determines whether CPU is only allocated during requests. True by default if the parent resources field is not set. However, if
+                                        resources is set, this field must be explicitly set to true to preserve the default behavior.
                                       type: boolean
                                     limits:
                                       additionalProperties:
