--- a/package/crds/compute.gcp.upbound.io_regioninstancegroupmanagers.yaml
+++ b/package/crds/compute.gcp.upbound.io_regioninstancegroupmanagers.yaml
@@ -74,6 +74,30 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  allInstancesConfig:
+                    description: |-
+                      Properties to set on all instances in the group. After setting
+                      allInstancesConfig on the group, you must update the group's instances to
+                      apply the configuration.
+                    items:
+                      properties:
+                        labels:
+                          additionalProperties:
+                            type: string
+                          description: ', The label key-value pairs that you want
+                            to patch onto the instance.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                        metadata:
+                          additionalProperties:
+                            type: string
+                          description: ', The metadata key-value pairs that you want
+                            to patch onto the instance. For more information, see
+                            Project and instance metadata.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   autoHealingPolicies:
                     description: |-
                       The autohealing policies for this managed instance
@@ -624,6 +648,30 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  allInstancesConfig:
+                    description: |-
+                      Properties to set on all instances in the group. After setting
+                      allInstancesConfig on the group, you must update the group's instances to
+                      apply the configuration.
+                    items:
+                      properties:
+                        labels:
+                          additionalProperties:
+                            type: string
+                          description: ', The label key-value pairs that you want
+                            to patch onto the instance.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                        metadata:
+                          additionalProperties:
+                            type: string
+                          description: ', The metadata key-value pairs that you want
+                            to patch onto the instance. For more information, see
+                            Project and instance metadata.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   autoHealingPolicies:
                     description: |-
                       The autohealing policies for this managed instance
@@ -1351,6 +1399,30 @@ spec:
             properties:
               atProvider:
                 properties:
+                  allInstancesConfig:
+                    description: |-
+                      Properties to set on all instances in the group. After setting
+                      allInstancesConfig on the group, you must update the group's instances to
+                      apply the configuration.
+                    items:
+                      properties:
+                        labels:
+                          additionalProperties:
+                            type: string
+                          description: ', The label key-value pairs that you want
+                            to patch onto the instance.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                        metadata:
+                          additionalProperties:
+                            type: string
+                          description: ', The metadata key-value pairs that you want
+                            to patch onto the instance. For more information, see
+                            Project and instance metadata.'
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   autoHealingPolicies:
                     description: |-
                       The autohealing policies for this managed instance
@@ -1532,6 +1604,17 @@ spec:
                   status:
                     items:
                       properties:
+                        allInstancesConfig:
+                          description: |-
+                            Properties to set on all instances in the group. After setting
+                            allInstancesConfig on the group, you must update the group's instances to
+                            apply the configuration.
+                          items:
+                            properties:
+                              effective:
+                                type: boolean
+                            type: object
+                          type: array
                         isStable:
                           description: 'A bit indicating whether the managed instance
                             group is in a stable state. A stable state means that:
