--- a/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
@@ -74,6 +74,15 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  certificateManagerCertificates:
+                    description: |-
+                      URLs to certificate manager certificate resources that are used to authenticate connections between users and the load balancer.
+                      Currently, you may specify up to 15 certificates. Certificate manager certificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
+                      sslCertificates and certificateManagerCertificates fields can not be defined together.
+                      Accepted format is //certificatemanager.googleapis.com/projects/{project}/locations/{location}/certificates/{resourceName} or just the self_link projects/{project}/locations/{location}/certificates/{resourceName}
+                    items:
+                      type: string
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -89,9 +98,9 @@ spec:
                     type: string
                   sslCertificates:
                     description: |-
-                      A list of RegionSslCertificate resources that are used to authenticate
-                      connections between users and the load balancer. Currently, exactly
-                      one SSL certificate must be specified.
+                      URLs to SslCertificate resources that are used to authenticate connections between users and the load balancer.
+                      At least one SSL certificate must be specified. Currently, you may specify up to 15 SSL certificates.
+                      sslCertificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
                     items:
                       type: string
                     type: array
@@ -276,6 +285,15 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  certificateManagerCertificates:
+                    description: |-
+                      URLs to certificate manager certificate resources that are used to authenticate connections between users and the load balancer.
+                      Currently, you may specify up to 15 certificates. Certificate manager certificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
+                      sslCertificates and certificateManagerCertificates fields can not be defined together.
+                      Accepted format is //certificatemanager.googleapis.com/projects/{project}/locations/{location}/certificates/{resourceName} or just the self_link projects/{project}/locations/{location}/certificates/{resourceName}
+                    items:
+                      type: string
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -286,9 +304,9 @@ spec:
                     type: string
                   sslCertificates:
                     description: |-
-                      A list of RegionSslCertificate resources that are used to authenticate
-                      connections between users and the load balancer. Currently, exactly
-                      one SSL certificate must be specified.
+                      URLs to SslCertificate resources that are used to authenticate connections between users and the load balancer.
+                      At least one SSL certificate must be specified. Currently, you may specify up to 15 SSL certificates.
+                      sslCertificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
                     items:
                       type: string
                     type: array
@@ -631,6 +649,15 @@ spec:
             properties:
               atProvider:
                 properties:
+                  certificateManagerCertificates:
+                    description: |-
+                      URLs to certificate manager certificate resources that are used to authenticate connections between users and the load balancer.
+                      Currently, you may specify up to 15 certificates. Certificate manager certificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
+                      sslCertificates and certificateManagerCertificates fields can not be defined together.
+                      Accepted format is //certificatemanager.googleapis.com/projects/{project}/locations/{location}/certificates/{resourceName} or just the self_link projects/{project}/locations/{location}/certificates/{resourceName}
+                    items:
+                      type: string
+                    type: array
                   creationTimestamp:
                     description: Creation timestamp in RFC3339 text format.
                     type: string
@@ -658,9 +685,9 @@ spec:
                     type: string
                   sslCertificates:
                     description: |-
-                      A list of RegionSslCertificate resources that are used to authenticate
-                      connections between users and the load balancer. Currently, exactly
-                      one SSL certificate must be specified.
+                      URLs to SslCertificate resources that are used to authenticate connections between users and the load balancer.
+                      At least one SSL certificate must be specified. Currently, you may specify up to 15 SSL certificates.
+                      sslCertificates do not apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
                     items:
                       type: string
                     type: array
