--- a/package/crds/monitoring.gcp.upbound.io_customservices.yaml
+++ b/package/crds/monitoring.gcp.upbound.io_customservices.yaml
@@ -36,7 +36,7 @@ spec:
       openAPIV3Schema:
         description: CustomService is the Schema for the CustomServices API. A Service
           is a discrete, autonomous, and network-accessible unit, designed to solve
-          an individual concern (Wikipedia).
+          an individual concern.
         properties:
           apiVersion:
             description: |-
