--- a/package/crds/bigquery.gcp.upbound.io_routines.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_routines.yaml
@@ -213,6 +213,117 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  remoteFunctionOptions:
+                    description: |-
+                      Remote function specific options.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        connection:
+                          description: |-
+                            Fully qualified name of the user-provided connection object which holds
+                            the authentication information to send requests to the remote service.
+                            Format: "projects/{projectId}/locations/{locationId}/connections/{connectionId}"
+                          type: string
+                        connectionRef:
+                          description: Reference to a Connection in bigquery to populate
+                            connection.
+                          properties:
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            policy:
+                              description: Policies for referencing.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          required:
+                          - name
+                          type: object
+                        connectionSelector:
+                          description: Selector for a Connection in bigquery to populate
+                            connection.
+                          properties:
+                            matchControllerRef:
+                              description: |-
+                                MatchControllerRef ensures an object with the same controller reference
+                                as the selecting object is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                            policy:
+                              description: Policies for selection.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          type: object
+                        endpoint:
+                          description: |-
+                            Endpoint of the user-provided remote service, e.g.
+                            https://us-east1-my_gcf_project.cloudfunctions.net/remote_add
+                          type: string
+                        maxBatchingRows:
+                          description: |-
+                            Max number of rows in each batch sent to the remote service. If absent or if 0,
+                            BigQuery dynamically decides the number of rows in a batch.
+                          type: string
+                        userDefinedContext:
+                          additionalProperties:
+                            type: string
+                          description: |-
+                            User-defined context as a set of key/value pairs, which will be sent as function
+                            invocation context together with batched arguments in the requests to the remote
+                            service. The total number of bytes of keys and values must be less than 8KB.
+                            An object containing a list of "key": value pairs. Example:
+                            { "name": "wrench", "mass": "1.3kg", "count": "3" }.
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   returnTableType:
                     description: |-
                       Optional. Can be set only if routineType = "TABLE_VALUED_FUNCTION".
@@ -459,6 +570,117 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  remoteFunctionOptions:
+                    description: |-
+                      Remote function specific options.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        connection:
+                          description: |-
+                            Fully qualified name of the user-provided connection object which holds
+                            the authentication information to send requests to the remote service.
+                            Format: "projects/{projectId}/locations/{locationId}/connections/{connectionId}"
+                          type: string
+                        connectionRef:
+                          description: Reference to a Connection in bigquery to populate
+                            connection.
+                          properties:
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            policy:
+                              description: Policies for referencing.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          required:
+                          - name
+                          type: object
+                        connectionSelector:
+                          description: Selector for a Connection in bigquery to populate
+                            connection.
+                          properties:
+                            matchControllerRef:
+                              description: |-
+                                MatchControllerRef ensures an object with the same controller reference
+                                as the selecting object is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                            policy:
+                              description: Policies for selection.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          type: object
+                        endpoint:
+                          description: |-
+                            Endpoint of the user-provided remote service, e.g.
+                            https://us-east1-my_gcf_project.cloudfunctions.net/remote_add
+                          type: string
+                        maxBatchingRows:
+                          description: |-
+                            Max number of rows in each batch sent to the remote service. If absent or if 0,
+                            BigQuery dynamically decides the number of rows in a batch.
+                          type: string
+                        userDefinedContext:
+                          additionalProperties:
+                            type: string
+                          description: |-
+                            User-defined context as a set of key/value pairs, which will be sent as function
+                            invocation context together with batched arguments in the requests to the remote
+                            service. The total number of bytes of keys and values must be less than 8KB.
+                            An object containing a list of "key": value pairs. Example:
+                            { "name": "wrench", "mass": "1.3kg", "count": "3" }.
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   returnTableType:
                     description: |-
                       Optional. Can be set only if routineType = "TABLE_VALUED_FUNCTION".
@@ -889,6 +1111,41 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  remoteFunctionOptions:
+                    description: |-
+                      Remote function specific options.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        connection:
+                          description: |-
+                            Fully qualified name of the user-provided connection object which holds
+                            the authentication information to send requests to the remote service.
+                            Format: "projects/{projectId}/locations/{locationId}/connections/{connectionId}"
+                          type: string
+                        endpoint:
+                          description: |-
+                            Endpoint of the user-provided remote service, e.g.
+                            https://us-east1-my_gcf_project.cloudfunctions.net/remote_add
+                          type: string
+                        maxBatchingRows:
+                          description: |-
+                            Max number of rows in each batch sent to the remote service. If absent or if 0,
+                            BigQuery dynamically decides the number of rows in a batch.
+                          type: string
+                        userDefinedContext:
+                          additionalProperties:
+                            type: string
+                          description: |-
+                            User-defined context as a set of key/value pairs, which will be sent as function
+                            invocation context together with batched arguments in the requests to the remote
+                            service. The total number of bytes of keys and values must be less than 8KB.
+                            An object containing a list of "key": value pairs. Example:
+                            { "name": "wrench", "mass": "1.3kg", "count": "3" }.
+                          type: object
+                          x-kubernetes-map-type: granular
+                      type: object
+                    type: array
                   returnTableType:
                     description: |-
                       Optional. Can be set only if routineType = "TABLE_VALUED_FUNCTION".
