--- a/examples/gkehub/membership.yaml
+++ b/examples/gkehub/membership.yaml
@@ -8,6 +8,7 @@ metadata:
   name: membership
 spec:
   forProvider:
+    location: us-central1
     endpoint:
     - gkeCluster:
       - resourceLinkSelector:
@@ -26,6 +27,7 @@ metadata:
   name: membership
 spec:
   forProvider:
+    deletionProtection: false
     initialNodeCount: 2
     location: us-central1-a
     nodeConfig:
